# sql-sculpter

./: LICENSE  README.md  pyproject.toml
src/sql_sculptor/: sculptor.py
