[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql_sculptor"
version = "0.0.1"
authors = [
  { name="Kyle Unger", email="kylemunger99@gmail.com" },
]
description = "A interactive tool for generating SQL queries"
readme = "README.md"
requires-python = "==3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kylemunger/sql-sculptor"
Issues = "https://github.com/kylemunger/sql-sculptor/issues"
